<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <item
        android:id="@+id/menu_restart"
        android:title="@string/menu_restart"
        android:icon="@drawable/restart_light"
        app:showAsAction="ifRoom"/>

    <!--非常强的套娃菜单-->
    <item android:id="@+id/menu_settings"
        android:title="@string/menu_settings">
        <menu>

            <item
                android:id="@+id/set_max"
                android:title="@string/set_max"/>

            <item
                android:id="@+id/sound_selector"
                android:title="@string/soundswitch"
                android:checkable="true" />

            <item
                android:id="@+id/auto_fill"
                android:title="@string/auto_fill_switch"
                android:checkable="true" />

                <item android:id="@+id/record"
                    android:title="@string/recordswitch"
                    android:checkable="true"
                    android:enabled="false"/>

        </menu>
    </item>

    <item
        android:title="@string/menu_achievement"
        app:showAsAction="never"
        android:id="@+id/menu_achievement"
        android:enabled="false"/>

    <item
        android:title="@string/menu_about"
        app:showAsAction="never"
        android:id="@+id/menu_about"/>

    <item
        android:title="@string/menu_exit"
        app:showAsAction="never"
        android:id="@+id/menu_exit"/>
</menu>