<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">

        <TextView
            android:id="@+id/TextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="36sp"
            android:layout_margin="10dp" />

        <TextView
            android:id="@+id/TextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rules"
            android:textSize="20sp"
            android:layout_below="@id/TextView1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="20dp"/>
        <TextView
            android:id="@+id/TextView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rules_l1"
            android:textSize="16sp"
            android:layout_below="@id/TextView2"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/TextView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rules_l2"
            android:textSize="16sp"
            android:layout_below="@id/TextView3"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/Textview13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_below="@id/TextView4"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/introduction"/>

        <TextView
            android:id="@+id/Textview14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/intro1"
            android:layout_below="@id/Textview13"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/Textview15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/intro2"
            android:layout_below="@id/Textview14"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/Textview16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/intro3"
            android:layout_below="@id/Textview17"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/Textview17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/intro4"
            android:layout_below="@id/Textview15"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"/>


        <TextView
            android:id="@+id/TextView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textSize="20sp"
            android:layout_below="@id/Textview16"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/TextView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_l2"
            android:textSize="16sp"
            android:layout_below="@id/TextView5"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"/>


        <TextView
            android:id="@+id/TextView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_l4"
            android:textSize="16sp"
            android:layout_below="@id/TextView6"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/TextView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_l5"
            android:textSize="16sp"
            android:layout_below="@id/TextView8"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/TextView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_l6"
            android:textSize="16sp"
            android:layout_below="@id/TextView9"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/error_7_view_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plutonium"
            android:layout_below="@id/TextView6"
            android:layout_toEndOf="@id/TextView8"
            android:layout_marginTop="5dp"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyright"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_below="@id/TextView10"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:id="@+id/copyright_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/copyright"
            android:text="@string/copyright_link"
            android:textSize="16sp"
            android:autoLink="web"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

        <ImageView
            android:id="@+id/copyright_pic"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:src="@drawable/copyright"
            android:contentDescription="@string/copyright_link"
            android:layout_below="@id/copyright_link"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/source_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/source_code"
            android:layout_below="@id/copyright_pic"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/source_code_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/source_code_link"
            android:autoLink="web"
            android:layout_below="@id/source_code"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/TextView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thanks"
            android:textSize="24sp"
            android:layout_below="@id/source_code_link"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

    </RelativeLayout>
</ScrollView>
