<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent" >

    <TextView
        android:id="@+id/minum_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_min"
        android:fontFamily="@font/digi"
        android:textSize="64sp"
        android:textColor="#000000"
        android:layout_margin="5dp"/>

    <TextView
        android:id="@+id/bomb_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_bomb"
        android:fontFamily="@font/digi"
        android:textSize="64sp"
        android:textColor="#00C853"
        android:layout_margin="5dp"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/maxnum_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_max"
        android:fontFamily="@font/digi"
        android:textSize="64sp"
        android:textColor="#000000"
        android:layout_margin="5dp"
        android:layout_alignParentEnd="true"
        tools:ignore="RelativeOverlap"/>

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:maxLength="3"
        android:hint="@string/hints_0"
        android:autofillHints="@string/hints_0"
        android:layout_below="@id/bomb_textview"
        android:layout_margin="10dp"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_0"
        android:layout_below="@id/editText"
        android:layout_centerHorizontal="true"
        android:onClick="Confirm_Click"/>

</RelativeLayout>